Fix grid overflow

--- a/blocks/grid/__text-wrapper/grid__text-wrapper.css
+++ b/blocks/grid/__text-wrapper/grid__text-wrapper.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     width: 246px;
-    height: 23px;
+    height: 30px;
     margin: auto;
     margin-top: 20px;
     justify-content: space-between;
